# Goodworkai

./: LICENSE  README.md  pyproject.toml  requirements.txt
genai_app/: __init__.py  choices.py  config.py  genai_output.py  main.py
genai_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
genai_app/utils/: __init__.py  logger.py  matcher.py
tests/: test_config.py  test_genai_output.py  test_matcher.py
